--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: docker compose up -d --build
+      - run: docker-compose up -d --build
